<resources>
    <string name="app_name">我的声音</string>
    <string name="buttonsave">保存</string>
    <string name="buttonload">装载</string>
    <string name="labelspeed">语速</string>
    <string name="labeltune">音调</string>
    <string name="labelvolumn">音量</string>
    <string name="buttoncancel">取消</string>
    <string name="buttonmoreset">高级设置</string>
    <string-array name="man">
        <item>度小美</item>
        <item>度小宇</item>
        <item>度逍遥</item>
        <item>度丫丫</item>
        <item>度小娇</item>
        <item>度米朵</item>
        <item>度博文</item>
        <item>度小童</item>
        <item>度小萌</item>
    </string-array>
    <array name="manint">
        <item>0</item>
        <item>1</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>103</item>
        <item>106</item>
        <item>110</item>
        <item>111</item>
    </array>
    <string-array name="speed">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>
    <array name="speedint">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </array>
    <string-array name="volumn">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <array name="volumnint">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </array>
</resources>
